adds close lesson date for teacher form and link in calendar

--- a/sites/all/themes/education/css/style.css
+++ b/sites/all/themes/education/css/style.css
@@ -1984,5 +1984,8 @@ button.popup__close {
     cursor: pointer;
     outline: none;
     /*transition: border .2s, background .2s, color .2s;*/
+}
 
+.close_lesson_button {
+    float: left;
 }
