add availability to select time range of selected date

--- a/sites/all/themes/education/css/colors.css
+++ b/sites/all/themes/education/css/colors.css
@@ -22,9 +22,12 @@ body.overlay {
   border-bottom: 1px solid #ffffff;
 }
 #header {
-  background-color: #1d84c3;
+  /*background-color: #1d84c3;*/
+  background-color: #0093c9;
+    /*
   background-image: -webkit-linear-gradient(top, #055a8e 0%, #1d84c3 100%);
   background-image: linear-gradient(to bottom, #055a8e 0%, #1d84c3 100%);
+  */
 }
 a {
   color: #0071B3;
