add some changes to styles and popup windows

--- a/sites/all/themes/education/css/colors.css
+++ b/sites/all/themes/education/css/colors.css
@@ -14,6 +14,12 @@ body.overlay {
 #main-menu-links li.active-trail a {
   background: #ffffff;
 }
+
+#main-menu-links li.active-trail a {
+    background: none;
+    text-decoration: underline;
+}
+
 .tabs ul.primary li a.active {
   background-color: #ffffff;
 }
