--- a/sites/all/themes/education/css/style.css
+++ b/sites/all/themes/education/css/style.css
@@ -2401,6 +2401,87 @@ input[type="radio"].dls-radio:disabled ~ .dls-radio-wrapper {
     width: 100%;
 }
 
+.b-topnav__icon {
+    position: relative;
+    display: inline-block;
+    float: right;
+    height: 62px;
+    width: 86px;
+    background-color: #cecece;
+    cursor: pointer;
+    position: absolute;
+    right: 79px;
+}
+
+.b-topnav__icon>span {
+    background: url(menu-button-of-three-lines.svg) no-repeat 50% 50%;
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+}
+
+#header .tooltip-bottom.tooltip.darkgrey {
+    top: 61px !important;
+}
+
+.b-topnav__dropdown-menu li {
+    display: block!important;
+    float: none!important;
+    cursor: pointer;
+    background: #2a2a2b;
+    opacity: .9;
+    margin-left: 0!important;
+}
+
+.b-topnav__dropdown-menu a {
+    color: #fff;
+    padding: 1em;
+    display: block;
+}
+
+/* Dropdown Button */
+.dropbtn {
+    background-color: #4CAF50;
+    color: white;
+    /*padding: 16px;*/
+    font-size: 16px;
+    border: none;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+   /* position: relative;*/
+    display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background: #2a2a2b;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    opacity: 0.8;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: #fff;
+    padding: 12px 16px 5px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {/*opacity: .8*/}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {display: block;}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {/*background-color: #3e8e41;*/}
+
 
 @media all and (max-width: 768px) {
     .quicktabs-tabs.quicktabs-style-nostyle li {
