--- a/sites/all/themes/education/css/style.css
+++ b/sites/all/themes/education/css/style.css
@@ -2673,6 +2673,19 @@ div.vertical-tabs {
     background: rgba(95, 94, 94, 0.6);
 }
 
+#fast_cart #edit-submit {
+    background: #f17c1e;
+    border: none;
+    color: #fff;
+    cursor: pointer;
+    font-size: 0.929em;
+    font-weight: normal;
+    text-align: center;
+    padding: 9px 37px 10px;
+    border-radius: 1px;
+    margin-top: 0;
+}
+
 @media all and (max-width: 768px) {
 
     .b-topnav__icon {
