--- a/sites/all/themes/education/css/style.css
+++ b/sites/all/themes/education/css/style.css
@@ -2673,7 +2673,7 @@ div.vertical-tabs {
     background: rgba(95, 94, 94, 0.6);
 }
 
-#fast_cart #edit-submit {
+#fast_cart #edit-submit, #fast_cart .form-submit {
     background: #f17c1e;
     border: none;
     color: #fff;
