--- a/sites/all/themes/education/css/style.css
+++ b/sites/all/themes/education/css/style.css
@@ -2686,8 +2686,56 @@ div.vertical-tabs {
     margin-top: 0;
 }
 
-@media all and (max-width: 768px) {
+#block-views-exp-teachers-index-page input.form-submit {
+    background: #f17c1e;
+    border: none;
+    color: #fff;
+    cursor: pointer;
+    font-size: 0.929em;
+    font-weight: normal;
+    text-align: center;
+    padding: 9px 52px 10px;
+    border-radius: 1px;
+    margin-top: 0;
+}
 
+.not-front #block-views-exp-teachers-index-page input.form-submit {
+    margin-top: 10px;
+    margin-left: 20px;
+}
+
+.front #block-views-exp-teachers-index-page {
+    background: url("tutors_search_bg.jpg");
+    color: #fff;
+    padding: 50px 60px;
+}
+
+.front .front-page-tutor-search-text {
+    text-align: center;
+    font-size: 20px;
+    width: 70%;
+    margin: 0 auto;
+}
+
+.front #block-views-exp-teachers-index-page .views-exposed-widgets {
+    width: 50%;
+    margin: 20px auto;
+}
+
+.front .views-widget-filter-field_grade_subject {
+    width: 60%;
+}
+
+.front .views-widget-filter-field_grade_subject select {
+    padding: 7px;
+    width: 100%;
+}
+
+.form__submit.pay_lesson_button {
+    display: none;
+}
+
+@media all and (max-width: 768px) {
     .b-topnav__icon {
         right: 10px;
         top: 40px;
@@ -2735,6 +2783,35 @@ div.vertical-tabs {
 }
 
 @media all and (max-width: 515px) {
+
+    .front .front-page-tutor-search-text {
+        width: 100%;
+        margin: 0 auto;
+    }
+
+    .front #block-views-exp-teachers-index-page {
+        padding: 50px 20px;
+    }
+
+    .front #block-views-exp-teachers-index-page .views-exposed-widgets {
+        width: 100%;
+    }
+
+    .front .views-widget-filter-field_grade_subject {
+        width: 100%;
+    }
+
+    .front #block-views-exp-teachers-index-page .views-exposed-widget.views-submit-button {
+        margin-top: 10px;
+        float: none;
+        padding: 0;
+    }
+
+    #block-views-exp-teachers-index-page input.form-submit {
+        width: 100%;
+        margin-top: 20px;
+    }
+
     .b-topnav__icon {
         right: 10px;
         top: 10px;
