--- a/sites/all/themes/education/css/style.css
+++ b/sites/all/themes/education/css/style.css
@@ -3200,6 +3200,50 @@ span.icon.i-tutor-card {
   display: none;
 }
 
+/*
+.lc-drawing.with-gui {
+  width: 100%;
+  height: auto;
+}
+
+.drawingfield.export.literally {
+  width: 100% !important;
+  height: auto !important;
+}
+
+
+
+.lc-drawing.with-gui canvas:nth-child(2) {
+  width: 1300px !important;
+  height: 1000px !important;
+}
+*/
+
+.literally .lc-drawing>* {
+  min-height: 600px;
+}
+
+
+
+.literally {
+  position: relative;
+  background: url('board-background-cells.jpg');
+  /*width: 1300px !important;
+  height: 1000px !important;*/
+  min-height: 600px;
+}
+
+/*
+canvas {
+  height: 100vh;
+  width: 100vw;
+  display: block;
+}
+*/
+
+
+
+
 @media all and (max-width: 768px) {
 
     #page #featured {
