--- a/sites/all/themes/education/css/style.css
+++ b/sites/all/themes/education/css/style.css
@@ -2483,7 +2483,7 @@ input[type="radio"].dls-radio:disabled ~ .dls-radio-wrapper {
 /* Show the dropdown menu on hover */
 /*.dropdown:hover .dropdown-content {display: block;}*/
 
-.w3-show{display:block!important}
+.w3-show{display:block!important; right: 0;}
 .w3-show-inline-block{display:inline-block!important}
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
