fix styles and add module roles_for_menu

--- a/sites/all/themes/education/css/style.css
+++ b/sites/all/themes/education/css/style.css
@@ -2863,6 +2863,7 @@ input[type="submit"]:before {
   text-align: center;
   font-size: 32px;
   font-weight: bold;
+  margin-top: 73px;
 }
 
 /* seacrh form front tabs*/
