add quiz settings and roles and fields

--- a/sites/all/themes/education/css/style.css
+++ b/sites/all/themes/education/css/style.css
@@ -3281,6 +3281,9 @@ canvas {
   background: #f5b828;
 }
 
+#block-views-teacher-quizes-block-1 {
+  clear: both;
+}
 
 @media all and (max-width: 768px) {
 
